fix offscreen slides opacity

--- a/styles/components/_carousel.scss
+++ b/styles/components/_carousel.scss
@@ -1,6 +1,11 @@
+.section {
+  overflow-y: hidden;
+}
+
 .carousel-agnostic {
   .keen-slider {
     padding-bottom: 16px;
+    overflow: visible !important;
   }
 
   .carousel-item {
@@ -8,11 +13,12 @@
     color: black;
     border: 1px solid black;
     box-shadow: 4px 4px 0 0 rgba(255, 255, 255, 0);
-    transition-duration: 0.4s;
-    transition-property: box-shadow;
+    transition: box-shadow 0.4s, opacity 0.4s;
+
 
     &:hover {
       box-shadow: 4px 4px 0 0 rgba(0, 0, 0, 1);
+      opacity: 1 !important;
     }
   }
 
